# polys_mapgen

./: CMakeLists.txt  README.md  package.xml
cfg/: convex_obstacles.yaml  mapgen.yaml  obstacles.yaml  random_obstacles.yaml
include/: hpolys_map.hpp
launch/: map_and_plan_demo.launch  map_and_rviz.launch  map_thengcopter.launch
rviz/: view_map.rviz
scripts/: generate_convex_obstacles.py  generate_obs.py
src/: hpolys_map.cpp  mapgen.cpp
